updated searching functionality